--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@tsparticles/svelte": "^3.1.1",
     "express": "^4.21.1",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
