--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -5,13 +5,13 @@
     {
       "purpose": "maskable",
       "sizes": "512x512",
-      "src": "icon512_maskable.png",
+      "src": "icon.jpg",
       "type": "image/png"
     },
     {
       "purpose": "any",
       "sizes": "512x512",
-      "src": "icon512_rounded.png",
+      "src": "icon.jpg",
       "type": "image/png"
     }
   ],
