--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
-    "socket.io": "^4.8.1",
-    "uuid": "^11.0.3"
+    "socket.io": "^4.8.1"
   }
 }
